--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
@@ -2,13 +2,10 @@
 
 {% block styles %}
 	{{ super() }}
-	<link rel="stylesheet" href="/css/mdf.css"></script>
+	{% resource 'resources/mdftemplate_mdfstyle.css' %}
 {% endblock %}
-
 
 {% block scripts %}
 	{{ super() }}
-	<script src="/scripts/custom.js"></script>
+	{% resource 'resources/mdftemplate_dataset_fields.js' %}
 {% endblock %}
-
-
