--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -7,56 +7,52 @@
 
 {% block package_general_metadata %}
 
-{{ form.input('purpose', label=_('Purpose'), id='field-purpose', placeholder=_('Regulation, Research, Education'), value=data.common_core.purpose, error=errors.purpose, classes=['control-medium'], attrs={'title': 'Purpose for which the dataset was created.'})}}
-   
-{{ form.input('collection', label=_('Relation'), id='field-collection', placeholder=_(''), value=data.collection, error=errors.collection, classes=['control-medium'], attrs={'title': 'Other iUTAH datasets that should be included as references for this dataset.'} )}}
-
 {{ form.input('language', label=_('Language'), id='field-language', placeholder=_('English'), value=data.common_core.language, error=errors.language, classes=['control-medium'], attrs={'title': 'The major language used in the dataset.'}, is_required=true )}}
-
-<div class="control-group">
-  <label class="control-label" for="field-research_focus">
-      {{ _("Research Focus Area") }}</label>
-  <div class="controls">
-    <select id="field-research_focus" name="research_focus" data-module="autocomplete" title="Which research focus area will the data be useful for?">
-        {% for type in h.get_research_focus() %}
-      <option value="{{ type }}" {% if type == data.common_core.research_focus %}selected{% endif %} >
-        {{ type }}
-      </option>
-        {% endfor %}
-    </select>
-  </div>
-</div>
 
 {{ form.input('intended_use', id='field-intended_use', label=_('Intended Use'), placeholder=_('for research of ...'), value=data.common_core.intended_use, error=errors.intuse, classes=['control-full', 'control-medium'], attrs={'title': "How do you plan on using the data"}, is_required=true) }}
 
 {{ form.input('rights', id='field-rights', label=_('Rights'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.common_core.rights, error=errors.rights, classes=['control-full', 'control-medium'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
 
 <div class="control-group">
-  <label class="control-label" for="field-type">
-      <span title="This field is required" class="control-required">*</span>
-      {{ _("Type") }}</label>
-  <div class="controls">
-    <select id="field-type" name="type" data-module="autocomplete" title="The type of the resource (e.g., Time Series,  River Cross Section, Raster)">
-        {% for type in h.get_types() %}
-      <option value="{{ type }}" {% if type == data.common_core.type %}selected{% endif %} >
-        {{ type }}
-      </option>
-        {% endfor %}
-    </select>
-  </div>
+	<label class="control-label" for="field-type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
+	<div class="controls">
+		<select id="field-type" name="type" data-module="autocomplete" title="The type of the resource (e.g., Time Series,  River Cross Section, Raster)">
+			{% for type in h.get_types() %}
+			<option value="{{ type }}" {% if type == data.common_core.type %}selected{% endif %} > {{ type }} </option>
+			{% endfor %}
+		</select>
+	</div>
 </div>
 
+<div class="panel panel-default">
+	<div>
+		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#generalDiv"> ></a></h2>
+	</div>
+	<div id="generalDiv" class="panel-collapse collapse out">
 
-{{ form.input('required_software', label=_('Required Software'), id='field-required_software', placeholder=_(''), value=data.required_software, error=errors.reqsoft, classes=['control-medium'], attrs={'title': 'Is specific software required to view/use this data? If so, what is it?'} )}}
-
-{#
-{{ form.input('citation', label=_('Citation'), id='field-citation', placeholder=_(''), value=data.citation, error=errors.citation, classes=['control-medium'], attrs={'title': 'What is the citation of the data'} )}}
-
-{% set citation = 'this is a test' %}#}
-{{ form.hidden('citation', 'this is a test') }}
-{{data.citation}}
-
-
+		<p>
+			{{ form.input('purpose', label=_('Purpose'), id='field-purpose', placeholder=_('Regulation, Research, Education'), value=data.common_core.purpose, error=errors.purpose, classes=['control-medium'], attrs={'title': 'Purpose for which the dataset was created.'})}}
+		</p>
+		<p>
+			{{ form.input('collection', label=_('Relation'), id='field-collection', placeholder=_(''), value=data.collection, error=errors.collection, classes=['control-medium'], attrs={'title': 'Other iUTAH datasets that should be included as references for this dataset.'} )}}
+		</p>
+		<p>
+			{{ form.input('required_software', label=_('Required Software'), id='field-required_software', placeholder=_(''), value=data.required_software, error=errors.reqsoft, classes=['control-medium'], attrs={'title': 'Is specific software required to view/use this data? If so, what is it?'} )}}
+		</p>
+		<p>
+			<div class="control-group">
+				<label class="control-label" for="field-research_focus"> {{ _("Research Focus Area") }}</label>
+				<div class="controls">
+					<select id="field-research_focus" name="research_focus" data-module="autocomplete" title="Which research focus area will the data be useful for?">
+						{% for type in h.get_research_focus() %}
+						<option value="{{ type }}" {% if type == data.common_core.research_focus %}selected{% endif %} > {{ type }} </option>
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+		</p>
+	</div>
+</div>
 
 {% endblock package_general_metadata %}
 
