--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
@@ -7,32 +7,49 @@
 
 {% block package_spatial_metadata %}
 
-{{ form.input('spatial', label=_('Spatial Coverage'), id='field-spatial', placeholder=_('Salt Lake City, Utah'), value=data.common_core.spatial, error=errors.spatial, classes=['control-medium'], attrs={'title': 'The range of spatial applicability of a dataset. Could include a spatial region like a bounding box or a named place.'}) }}
+<div class="panel panel-default">
+	<div>
+		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#spatialDiv"> Spatial metadata </a> </h4>
+	</div>
+	<div id="spatialDiv" class="panel-collapse collapse out">
 
-<div class="control-group">
-  <label class="control-study" for="field-study_area"> {{ _("iUtah Study Area")}}</label>
-       <div class="controls">
-    <select id="field-study_area" name="study_area" data-module="autocomplete" title="iUtah Study Area.">
-        {% for area in h.study_area() %}
-      <option value="{{ area }}" {% if area == data.study_area %}selected{% endif %} >
-        {{ area }}
-      </option>
-        {% endfor %}
-    </select>
-  </div>
+		<p>
+			{{ form.input('spatial', label=_('Spatial Coverage'), id='field-spatial', placeholder=_('Salt Lake City, Utah'), value=data.common_core.spatial, error=errors.spatial, classes=['control-medium'], attrs={'title': 'The range of spatial applicability of a dataset. Could include a spatial region like a bounding box or a named place.'}) }}
+		</p>
+		<p>
+			<div class="control-group">
+				<label class="control-study" for="field-study_area"> {{ _("iUtah Study Area")}}</label>
+				<div class="controls">
+					<select id="field-study_area" name="study_area" data-module="autocomplete" title="iUtah Study Area.">
+						{% for area in h.study_area() %}
+						<option value="{{ area }}" {% if area == data.study_area %}selected{% endif %} > {{ area }} </option>
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+		</p>
+		<p>
+			{{ form.input('north_extent', label=_('North Extent'), id='field-north_extent', placeholder=_(''), value=data.north_extent, error=errors.north_extent, classes=['control-medium'], attrs={'title': 'What is the north extent of the data'} )}}
+		</p>
+		<p>
+			{{ form.input('south_extent', label=_('South Extent'), id='field-south_extent', placeholder=_(''), value=data.south_extent, error=errors.south_extent, classes=['control-medium'], attrs={'title': 'What is the south extent of the data'} )}}
+		</p>
+		<p>
+			{{ form.input('east_extent', label=_('East Extent'), id='field-east_extent', placeholder=_(''), value=data.east_extent, error=errors.east_extent, classes=['control-medium'], attrs={'title': 'What is the east extent of the data'} )}}
+		</p>
+		<p>
+			{{ form.input('west_extent', label=_('West Extent'), id='field-west_extent', placeholder=_(''), value=data.west_extent, error=errors.west_extent, classes=['control-medium'], attrs={'title': 'What is the west extent of the data'} )}}
+		</p>
+		<p>
+			{{ form.input('feature_types', label=_('Feature Types'), id='field-feature_types', placeholder=_('points, lines, polygons, regularly spaced grid, etc.'), value=data.feature_types, error=errors.fettypes, classes=['control-medium'], attrs={'title': 'For geospatial data, the type of geographic feature'} )}}
+		</p>
+		<p>
+			{{ form.input('horz_coord_system', label=_('Horizontal Coordinate System'), id='field-horz_coord_system', placeholder=_(''), value=data.horz_coord_system, error=errors.horz_coord_system, classes=['control-medium'], attrs={'title': 'What is the horizontal coordinate system of the data'} )}}
+		</p>
+		<p>
+			{{ form.input('vert_coord_system', label=_('Vertical Coordinate System'), id='field-vert_coord_system', placeholder=_(''), value=data.vert_coord_system, error=errors.vert_coord_system, classes=['control-medium'], attrs={'title': 'What is the vertical coordinate system of the data'} )}}
+		</p>
+	</div>
 </div>
-
-{{ form.input('north_extent', label=_('North Extent'), id='field-north_extent', placeholder=_(''), value=data.north_extent, error=errors.north_extent, classes=['control-medium'], attrs={'title': 'What is the north extent of the data'} )}}
-{{ form.input('south_extent', label=_('South Extent'), id='field-south_extent', placeholder=_(''), value=data.south_extent, error=errors.south_extent, classes=['control-medium'], attrs={'title': 'What is the south extent of the data'} )}}
-{{ form.input('east_extent', label=_('East Extent'), id='field-east_extent', placeholder=_(''), value=data.east_extent, error=errors.east_extent, classes=['control-medium'], attrs={'title': 'What is the east extent of the data'} )}}
-{{ form.input('west_extent', label=_('West Extent'), id='field-west_extent', placeholder=_(''), value=data.west_extent, error=errors.west_extent, classes=['control-medium'], attrs={'title': 'What is the west extent of the data'} )}}
-
-{{ form.input('feature_types', label=_('Feature Types'), id='field-feature_types', placeholder=_('points, lines, polygons, regularly spaced grid, etc.'), value=data.feature_types, error=errors.fettypes, classes=['control-medium'], attrs={'title': 'For geospatial data, the type of geographic feature'} )}}
-
-
-{{ form.input('horz_coord_system', label=_('Horizontal Coordinate System'), id='field-horz_coord_system', placeholder=_(''), value=data.horz_coord_system, error=errors.horz_coord_system, classes=['control-medium'], attrs={'title': 'What is the horizontal coordinate system of the data'} )}}
-{{ form.input('vert_coord_system', label=_('Vertical Coordinate System'), id='field-vert_coord_system', placeholder=_(''), value=data.vert_coord_system, error=errors.vert_coord_system, classes=['control-medium'], attrs={'title': 'What is the vertical coordinate system of the data'} )}}
-
-
 
 {% endblock package_spatial_metadata %}
